# GPU_Computing

CUDA practices/: MatrixMul.cu
Final Project/: Dev_Note.txt  kernel - Copy.cpp  kernel.cu
HW1/: CMakeLists.txt  main.cu
HW1/HW1/: HW1.sln  HW1.vcxproj  HW1.vcxproj.filters
HW1/HW1/Debug/HW1.tlog/: HW1.lastbuildstate
HW1/HW1/Release/HW1.tlog/: HW1.lastbuildstate
HW1/HW1/x64/Debug/: HW1.ilk  vc142.idb
HW1/HW1/x64/Debug/HW1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HW1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HW1/HW1/x64/Release/HW1.tlog/: CL.command.1.tlog  CL.write.1.tlog  HW1.lastbuildstate
HW1/HW1_2/: HW1_2.sln  HW1_2.vcxproj
HW1/HW1_2/x64/Debug/: HW1_2.exp  HW1_2.ilk  HW1_2.lib  kernel.cu1271310203.deps
HW1/HW1_2/x64/Debug/HW1_2.tlog/: CudaCompile.write.1u.tlog  HW1_2.lastbuildstate  HW1_2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ProgramingAssignment1/: GPU_indexing_trial.cpp  hereford_256.ppm  kernel.cu  kernel_CPU.cu  kernel_GPU.cu
ProgramingAssignment1/vs_proj/PA1/: PA1.sln  PA1.vcxproj  hereford_256.ppm  kernel.cu
ProgramingAssignment1/vs_proj/PA1/x64/Debug/: PA1.exp  PA1.ilk  PA1.lib  kernel.cu679031725.deps
ProgramingAssignment1/vs_proj/PA1/x64/Debug/PA1.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  PA1.lastbuildstate  PA1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ProgramingAssignment1/vs_proj/PA1/x64/Release/: PA1.exp  kernel.cu679031725.deps
(+7 files in other folders)
